--- a/css/style.css
+++ b/css/style.css
@@ -1246,3 +1246,21 @@ fieldset {
 .hidden {
   display: none;
 }
+
+.error-message {
+  color: #fff;
+  z-index: 100;
+  margin: 0 auto;
+  text-align: center;
+  vertical-align: middle;
+  background-color: rgba(0, 0, 0, 0.8);
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 40%;
+  font-size: 30px;
+  border-radius: 5px;
+  font-weight: 700;
+  margin-top: 200px;
+  padding: 50px 20px;
+}
